@@ -1,3 +1,15 @@
+2012-11-03  Pavel Feldman  <pfeldman@chromium.org>
+
+        REGRESSION (r132014-r132047): Webkit Inspector Window docking broken
+        https://bugs.webkit.org/show_bug.cgi?id=101125
+
+        Reviewed by Vsevolod Vlasov.
+
+        Migrated from ?docked= to ?dockSide= format.
+
+        * UIProcess/WebInspectorProxy.cpp:
+        (WebKit::WebInspectorProxy::createInspectorPage):
+
 2012-10-25  Martin Robinson  <mrobinson@igalia.com>
 
         [GTK] Move soup authentication from GtkAuthenticationDialog to WebCore
