@@ -1,3 +1,15 @@
+2012-11-03  Pavel Feldman  <pfeldman@chromium.org>
+
+        REGRESSION (r132014-r132047): Webkit Inspector Window docking broken
+        https://bugs.webkit.org/show_bug.cgi?id=101125
+
+        Reviewed by Vsevolod Vlasov.
+
+        Added "bottom" as default docked state.
+
+        * inspector/front-end/DockController.js:
+        (WebInspector.DockController):
+
 2012-11-02  Shinya Kawanaka  <shinyak@chromium.org>
 
         [Shadow] ShadowRoot should be able to know the existence of <content>
